<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stephen.amaze.ViewControllers.HomeActivity"
    tools:showIn="@layout/activity_home">

    <FrameLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/home_helplayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/see_through">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/help_background"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/universal_ten"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium"
                android:text="@string/help_text"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/universal_five"
                android:background="@color/colorPrimary"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/universal_ten">
                <TableRow>
                    <ImageView
                        android:layout_width="@dimen/universal_forty"
                        android:layout_height="@dimen/universal_forty"
                        android:src="@drawable/vert"
                        android:layout_marginBottom="@dimen/universal_five"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/universal_forty"
                        android:gravity="center_vertical"
                        android:layout_marginStart="@dimen/universal_ten"
                        android:textSize="@dimen/text_medium"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/line"
                        android:layout_marginBottom="@dimen/universal_five"/>
                </TableRow>
                <TableRow>
                    <ImageView
                        android:layout_width="@dimen/universal_forty"
                        android:layout_height="@dimen/universal_forty"
                        android:padding="@dimen/universal_ten"
                        android:src="@drawable/pick_up"
                        android:layout_marginBottom="@dimen/universal_five"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/universal_forty"
                        android:gravity="center_vertical"
                        android:layout_marginStart="@dimen/universal_ten"
                        android:textSize="@dimen/text_medium"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/pickup_outside"
                        android:layout_marginBottom="@dimen/universal_five"/>
                </TableRow>
                <TableRow>
                    <ImageView
                        android:layout_width="@dimen/universal_forty"
                        android:layout_height="@dimen/universal_forty"
                        android:padding="@dimen/universal_ten"
                        android:src="@drawable/picked_up"
                        android:layout_marginBottom="@dimen/universal_five"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/universal_forty"
                        android:gravity="center_vertical"
                        android:layout_marginStart="@dimen/universal_ten"
                        android:textSize="@dimen/text_medium"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/pickup_inside"
                        android:layout_marginBottom="@dimen/universal_five"/>
                </TableRow>
                <TableRow>
                    <ImageView
                        android:layout_width="@dimen/universal_forty"
                        android:layout_height="@dimen/universal_forty"
                        android:padding="@dimen/universal_ten"
                        android:src="@drawable/point"
                        android:layout_marginBottom="@dimen/universal_five"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/universal_forty"
                        android:gravity="center_vertical"
                        android:layout_marginStart="@dimen/universal_ten"
                        android:textSize="@dimen/text_medium"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/startend_point"
                        android:layout_marginBottom="@dimen/universal_five"/>
                </TableRow>
                <TableRow>
                    <ImageView
                        android:layout_width="@dimen/universal_forty"
                        android:layout_height="@dimen/universal_forty"
                        android:background="@color/colorPrimary"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/universal_forty"
                        android:gravity="center_vertical"
                        android:layout_marginStart="@dimen/universal_ten"
                        android:textSize="@dimen/text_medium"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/wall"/>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/home_okbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/colorAccent"
                android:background="@null"
                android:layout_gravity="end"/>

        </LinearLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
